# sshn-scraper

./: Cargo.toml  README.md  flake.nix
Bruno/: Refresh token.bru  bruno.json
sshn-cli/: Cargo.toml
sshn-cli/src/: auth.rs  error.rs  main.rs  publication.rs  secrets.rs
sshn-cli/src/commands/: login.rs  mod.rs
sshn-lib/: Cargo.toml  queries.graphql  schema.graphql
sshn-lib/src/: client.rs  constants.rs  error.rs  lib.rs  queries.rs  tokens.rs  utils.rs
sshn-lib/src/api/: publication.rs
