[package]
name = "sshn-lib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.22.0"
chrono = { version = "0.4.38", features = ["serde"] }
digest = "0.10.7"
graphql_client = "0.14.0"
log = "0.4.21"
rand = "0.8.5"
reqwest = { version = "0.12.3", features = ["json"] }

serde = { version = "1.0.198", features = ["derive"] }
serde_urlencoded = "0.7.1"
sha2 = "0.10.8"
thiserror = "1.0.58"
url = "2.5.0"

[dev-dependencies]
dotenv = "0.15.0"
tokio = { version = "1.37.0", features = ["full"] }
